Align mode not working properly or at least not as used to work #77476

Closed
opened 2020-06-06 00:54:09 +02:00 by Fe E · 7 comments

System Information
Operating system:

Win 10
Graphics card:

GTX 1080

Blender Version
Broken: (2.90.0-c7329da14b22, alpha, 2020-6-5, as found on the splash screen)
Worked: (2.83.0-82e3bd4bbb82, master, 2020-6-5)

Short description of error

image.png
after creating new custom orientation and using it (as it says use after creation)

when bpy.ops.transform.transform(mode='ALIGN') want to be used it no longer wil use latest orientation. instead it will use view one:
image.png

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • create 2 cubes
  • deselect all, and give first one random rotation and create orientation with use after creation and overwrite previous both active
  • give align to transform orientation a shortcut
  • deselect all, select second cube and try to align to the latest orientation recently created by giving using to transform orientation a shortcut and try to use it and here's the problem: it will just use the view orientation BUT it works if it's being used directly from UI.
**System Information** Operating system: Win 10 Graphics card: GTX 1080 **Blender Version** Broken: (2.90.0-c7329da14b22, alpha, 2020-6-5, as found on the splash screen) Worked: (2.83.0-82e3bd4bbb82, master, 2020-6-5) **Short description of error** ![image.png](https://archive.blender.org/developer/F8584220/image.png) after creating new custom orientation and using it (as it says use after creation) when bpy.ops.transform.transform(mode='ALIGN') want to be used it no longer wil use latest orientation. instead it will use view one: ![image.png](https://archive.blender.org/developer/F8584226/image.png) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). - create **2 cubes** - deselect all, and give **first one** random rotation and create orientation with use **after creation** and **overwrite previous** both active - give align to transform orientation a shortcut - deselect all, select **second cube** and try to align to the latest orientation recently created by giving **using to transform orientation** a shortcut and try to use it and here's the problem: it will just use the view orientation BUT it works if it's being used directly from UI.
Author

Added subscriber: @FedericoExposito

Added subscriber: @FedericoExposito

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

By default, now all operators that need an axis in the transform properties (such as rotate for example), have a View orientation if invoked (modal that blocks interface) and not executed.
We can make an exception for this operator, but what is the use of invoking Align since you have to confirm after pressing the shortcut?

You can edit the Redo Panel and use Redo Last (Shift R) on other objects. It's better than assigning a shortcut.

By default, now all operators that need an axis in the transform properties (such as rotate for example), have a View orientation if invoked (modal that blocks interface) and not executed. We can make an exception for this operator, but what is the use of invoking `Align` since you have to confirm after pressing the shortcut? You can edit the Redo Panel and use Redo Last (Shift R) on other objects. It's better than assigning a shortcut.
Author

Cause what I usually do is to grab custom transform from a face, edge or simple another object and use it right after to rotate/move/scale around that
I'm pretty sure a lot of people use it in that way. Align to view could be useful but this one is much more needed.
What do u mean by edit the Redo Panel?
Thanks.

Cause what I usually do is to grab custom transform from a face, edge or simple another object and use it right after to rotate/move/scale around that I'm pretty sure a lot of people use it in that way. Align to view could be useful but this one is much more needed. What do u mean by edit the Redo Panel? Thanks.

This issue was referenced by 27fb75fec2

This issue was referenced by 27fb75fec265fbea31f3976e829b405a87b9970e

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-06-19 17:57:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77476
No description provided.