Fix T77476: Transform Align mode using View orientation by default